crates/hpc-core/tests/compile_fail/api_no_event_use.stderr
error: unused `EventToken` in tuple element 1 that must be used
  --> tests/compile_fail/api_no_event_use.rs:16:5
   |
16 |     buf.enqueue_kernel(&queue, &kernel, 16).unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: GPU work is in-flight: call wait(event, buf) to complete it
note: the lint level is defined here
  --> tests/compile_fail/api_no_event_use.rs:1:9
   |
1  | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
